docs: worklog entry for Tomcat DOM fix, tunnel, and directory audit